# Lab

./: CMakeLists.txt  main.c
cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake  test.txt  test2.txt
cmake-build/libs/: Makefile  cmake_install.cmake
cmake-build/libs/algorithms/: Makefile  cmake_install.cmake
cmake-build/libs/data_structures/: Makefile  cmake_install.cmake
libs/algorithms/: algorithm.c
libs/algorithms/array/: array.c  array.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/file/: file_.c  file_.h
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/orderedset/: orderedset.c  orderedset.h
libs/data_structures/string/: string_.c  string_.h
libs/data_structures/unorderedset/: unorderedset.c  unorderedset.h
libs/data_structures/vector/: vector.c  vector.h  vectorVoid.c  vectorVoid.h
